--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue3-tabs-component": "^1.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
